@@ -1,4 +1,5 @@
 1.3 beta 4
+- Fixed accidentals in score editor working over all octaves
 - Move playback timer to the status bar where it is less intrusive
 
 1.3 beta 3
